Openshift/Lab2/deploy/demo-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: datapower-demo-svc
spec:
  ports:
    - name: demosvc
      protocol: TCP
      port: 6443
      targetPort: 6443
  selector:
    app.kubernetes.io/instance: datapower-quickstart
  type: ClusterIP
  sessionAffinity: None
