Openshift/Lab2/deploy/demo-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: quickstart-webui
spec:
  host: demo-svc-cp4i.apps.demo.ibmdte.net
  to:
    kind: Service
    name: demo-quickstart
    weight: 100
  port:
    targetPort: demosvc
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
